# Cmake_learn

./: CMakeLists.txt  example.cpp
include/: lib.h
lib/Debug/: static.lib
resource/shader/cloth/: LitWithAnisotropy.hlsl  MF_ClothCalcNormalWS.shadersubgraph  UberClothLit.hlsl  v2_UberClothLit_clip.shadergraph
resource/shader/glsl/: glsl.compute  glsl1_450.vert  glsl2_330.frag  glsl2_330.vert
resource/shader/hlsl/: HLSL为DX12.txt  compute.hlsl  frag1.hlsl  vert-frag2.hlsl  vert1.hlsl
resource/shader/msl/: metal.msl
src/: CMakeLists.txt  lib.cpp  main.cpp
src/ProjectLua/: CMakeLists.txt  main.cpp  test.lua
src/ProjectVkSample/: CMakeLists.txt  FindVulkan.cmake  frag.frag  helloVK.cpp  vert.vert
